methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:18: error: expected class or object definition
def faireV(c:Color){
^PatternPicture:33: error: expected class or object definition
def faireMotif(){
^PatternPicture:40: error: Unmatched closing brace '}' ignored here
}
^